# ryo

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  ISSUES.md  LICENSE  NOTES.md  README.md  TODO.md  build.rs  codspeed.yml  empty  exit_arithmetic  exit_div  exit_multi  exit_mut  exit_neg  exit_paren  exit_simple  exit_sub  exit_typed  exit_zero  flat  fn_add  fn_arith  fn_main_0  fn_main_42  fn_print  fn_var  forward_ref  hello  install.sh  justfile  mkdocs.yml  multi_params  multi_print  nested_calls  newline  run_linux_tests.sh
.github/workflows/: ci.yml  codspeed.yml  examples.yml  nightly.yml  pages.yml  release.yml
benchmarks/: .gitignore  README.md
benchmarks/eager_destruction/: .gitignore  README.md  eager_destruction.rs  eager_destruction.ryo  eager_destruction_manual_drop.rs  run_benchmarks.sh
benchmarks/fibonacci/: .gitignore  README.md  fib.exs  fib.go  fib.jl  fib.kt  fib.py  fib.rb  fib.rs  fib.ryo  fib.swift  fib.ts  run_benchmarks.sh
build-support/: Cargo.toml
build-support/src/: lib.rs
docs/: CLAUDE.md  design_issues.md  getting_started.md  implementation_roadmap.md  index.md  language_comparison.md  proposals.md  quickstart.md  specification.md  std.md  troubleshooting.md
docs/analysis/: 2026-04-20-consistency-sweep-report.md  2026-04-20-while-keyword-analysis.md
docs/archive/: spec_summary_v0.1.md
docs/dev/: CLAUDE.md  README.md  alpha_scope.md  arc_optimizer.md  architecture_analysis.md  borrow_checker.md  built_in.md  closure_representation.md  compilation_pipeline.md  concurrency.md  concurrency_loom_kt.md  considerations.md  copy_elision.md  design_issues.md  dyn_trait.md  go_reference.md  implementation_roadmap.md  installation.md  memory_model_comparison.md  mojo_reference.md  official_pkg.md  pipeline_alignment.md  pkg_manager.md  proposals.md  rust_reference.md  std.md  std_ext.md  stdlib_optimizations.md  tensor.md  testing.md  unsafe.md  wasm_target.md  zig_reference.md
docs/dev/proposals/: wasm_target.md
docs/examples/: async_example.ryo  data_structures.ryo  error_handling.ryo  floats_and_ordering.ryo  ownership_borrowing.ryo
docs/examples/modules/02-multi-file-module/src/server/: http.ryo
docs/examples/modules/06-circular-deps/src/fixed/user/: user.ryo
docs/experimental/: lightweight_vectorization.md
docs/superpowers/plans/: 2026-07-02-cargo-workspace-refactor.md
docs/superpowers/specs/: 2026-04-29-milestone-7-float-and-extended-ops-design.md  2026-07-02-cargo-workspace-refactor-design.md
examples/: README.md  assert.ryo  booleans.ryo  calculator.ryo  classify.ryo  closure_fib.ryo  example.ryo  fizzbuzz.ryo  floats_and_ordering.ryo  for_range.ryo  hello.ryo  hello_world_str.ryo  mem.ryo  multiline.ryo  multiple_statements.ryo  panic.ryo  recursive_fib.ryo  simple.ryo  square.ryo  while_loop.ryo
examples/future/: closure_fib.ryo  data_structures.ryo  error_handling.ryo  example.ryo  hello_world.ryo  hello_world_str.ryo  io.ryo  mandelbrot.ryo  mem.ryo  memory.ryo  ownership_borrowing.ryo  simple.ryo  task_join.ryo  temperature_converter.ryo  trie.ryo
examples/future/modules/03-access-levels/src/database/: connection.ryo
examples/future/modules/06-circular-deps/src/: main.ryo
examples/future/modules/06-circular-deps/src/broken/: post.ryo  user.ryo
examples/future/modules/06-circular-deps/src/fixed/post/: post.ryo
examples/milestone2/: README.md  error_invalid_syntax.ryo  error_missing_assign.ryo  error_missing_initializer.ryo  error_multiple.ryo  error_type_annotation.ryo  error_unexpected_token.ryo
examples/milestone3/: README.md  arithmetic.ryo  exit_zero.ryo  multiple.ryo  parenthesized.ryo  simple.ryo
experimental/: concurrency.md  wait_syntaxt.md  zen.md
landing/: CNAME  index.html  og-image.html  robots.txt  script.js  sitemap.xml  styles.css
landing/assets/: reference.css  ryo-highlight.js  script.js  styles.css
landing/reference/: index.html
runtime/: Cargo.toml
runtime/src/: lib.rs
ryo/: Cargo.toml  build.rs
ryo-backend/: Cargo.toml  build.rs
ryo-backend/src/: codegen.rs  lib.rs  linker.rs  toolchain.rs
ryo-core/: Cargo.toml
ryo-core/src/: ast.rs  diag.rs  lib.rs  ownership.rs  tir.rs  types.rs  uir.rs
ryo-driver/: Cargo.toml
ryo-driver/src/: pipeline.rs
ryo-frontend/: Cargo.toml
ryo-frontend/benches/: frontend.rs
ryo-frontend/src/: astgen.rs  builtins.rs  lexer.rs  lib.rs  ownership.rs  parser.rs  sema.rs
ryo/src/: main.rs
ryo/tests/: asan_smoke.rs  integration_tests.rs  valgrind_smoke.rs
ryo/tests/common/: mod.rs
scripts/: Dockerfile  check_cranelift.sh  run_linux_tests.sh  verify_aot_compilation.sh
src/: CLAUDE.md  ast.rs  ast_lower.rs  astgen.rs  builtins.rs  codegen.rs  diag.rs  errors.rs  evaluator.rs  hir.rs  indent.rs  lexer.rs  linker.rs  lower.rs  main.rs  ownership.rs  parser.rs  pipeline.rs  runtime_lib.rs  sema.rs  tir.rs  toolchain.rs  types.rs  uir.rs
tests/: asan_smoke.rs  integration_tests.rs  valgrind_smoke.rs
tests/common/: mod.rs
