[workspace]
resolver = "3"
members = [
    "build-support",
    "runtime",
    "ryo-core",
    "ryo-frontend",
    "ryo-backend",
    "ryo-driver",
    "ryo",
]
default-members = ["ryo"]

[workspace.package]
rust-version = "1.97.0"

[workspace.dependencies]
ariadne = "0.6"
chumsky = "0.12"
hashbrown = "0.17"
clap = { version = "4.6", features = ["derive"] }
cranelift = "0.131"
cranelift-jit = "0.131"
cranelift-module = "0.131"
cranelift-object = "0.131"
xz2 = "0.1"
logos = "0.16"
tar = "0.4"
target-lexicon = "0.13.5"
ureq = "3"
dirs = "6"
sha2 = "0.11"
tempfile = "3.27"
ryo-runtime = { path = "runtime" }
ryo-core = { path = "ryo-core" }
ryo-frontend = { path = "ryo-frontend" }
ryo-backend = { path = "ryo-backend" }
ryo-driver = { path = "ryo-driver" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
