[package]
name = "ryo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ryo-core = { path = "../ryo-core" }
ryo-runtime = { path = "../runtime" }
cranelift = "0.131"
cranelift-jit = "0.131"
cranelift-module = "0.131"
cranelift-object = "0.131"
target-lexicon = "0.13.5"
ureq = "3"
tar = "0.4"
xz2 = "0.1"
dirs = "6"

[build-dependencies]
sha2 = "0.10"
