[package]
name = "ryo-backend"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
ryo-core = { workspace = true }
ryo-runtime = { workspace = true }
cranelift = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
target-lexicon = { workspace = true }
ureq = { workspace = true }
tar = { workspace = true }
xz2 = { workspace = true }
dirs = { workspace = true }

[build-dependencies]
sha2 = { workspace = true }
build-support = { path = "../build-support" }
