[package]
name = "ryo-frontend"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
ryo-core = { workspace = true }
logos = { workspace = true }
chumsky = { workspace = true }

[dev-dependencies]
divan = { version = "5.0.1", package = "codspeed-divan-compat" }

[[bench]]
name = "frontend"
harness = false
