[package]
name = "ryo"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
ryo-driver = { workspace = true }
ryo-backend = { workspace = true }
clap = { workspace = true }

[build-dependencies]
sha2 = { workspace = true }
build-support = { path = "../build-support" }

[dev-dependencies]
tempfile = { workspace = true }
